--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,16 @@ under the License.
             <artifactId>play-json_2.10</artifactId>
             <version>2.4.3</version>
         </dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
     </dependencies>
 
 	<!-- We use the maven-assembly plugin to create a fat jar that contains all dependencies
